# vulnforge-ai

./: .dockerignore  .env.example  .gitignore  APPENDIX.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  REVIEW.md  docker-compose.yml  plano_comparacao_cenarios_dispositivos-reais-virtuais.txt  pyproject.toml  requirements-dev.txt  requirements-sbseg.txt  requirements.txt
data/datasets/: example_labeled.csv  out.csv  out.csv.meta.json  sbseg2024_validation_dos.csv  sbseg2024_validation_dos.csv.meta.json
data/flows/: example.csv
data/raw/: vulns.json
data/sbseg2024/harmonized/: real_aberta.csv  real_isolada.csv  tool.csv
data/sbseg2024/runs/: xrce_dds_dos_flows.csv  xrce_dds_normal.pcap  xrce_dds_normal_flows.csv
data/sbseg2024/tool/: xrce_dds_dos.csv  xrce_dds_dos.csv.meta.json  (+4 more)
docs/: ARCHITECTURE.md  ARTIFACT_CHECKLIST.md  VALIDATION_REPORT.md
examples/: flows.csv  flows_attack.csv  vulnerabilities.json
reports/: example_report.md
scenarios/examples/: xrce_dds_flooding.yaml  xrce_dds_malformed.yaml  xrce_dds_normal.yaml  xrce_dds_replay.yaml  zenoh_flooding.yaml  zenoh_normal.yaml
scenarios/sbseg2024/: xrce_dds_dos.yaml  xrce_dds_normal.yaml
scripts/: capture_repro.py  make_presentation.py  reproduce.py  reproduce.sh  run-experiments.sh  run-minimal.sh  run-tests.sh  setup.sh
scripts/sbseg2024/: agent_sink.py  compare_datasets.py  generate_synthetic_pcap.py  generate_synthetic_pcap_v2.py  harmonize.py  make_comparison_deck.py  run_testbed.py  validate_full_flow.sh
src/vulnforge/: __init__.py  api.py  cli.py  config.py  db.py  logging_setup.py  models.py
tests/: test_cli_smoke.py  test_codegen_safety.py  test_codegen_sandbox.py  test_config.py  test_dataset_builder.py  test_dataset_db.py  test_db.py  test_ids_trainer.py  test_integration.py  test_mutator_sandbox.py  test_normalizer.py  test_optional_features.py  test_pcap_analysis.py  test_protocol_registry.py  test_protocols_validation.py  test_rules_analyzer.py  test_rules_scenarios.py  test_safety_guard.py  test_scenario_generator.py  test_scenario_validator.py  test_validation_harness.py
(+46 files in other folders)
