[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnforge-ai"
version = "0.1.0"
description = "Pesquisa em ciberseguranca de protocolos IoT (DDS, XRCE-DDS, Zenoh): vuln -> analise -> cenario -> dataset -> IDS baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "VulnForge AI" }]
keywords = ["iot", "security", "dds", "xrce-dds", "zenoh", "ids", "research"]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
traffic = ["scapy>=2.5"]
zenoh = ["eclipse-zenoh>=1.0"]
dds = ["cyclonedds>=0.10"]
dev = ["pytest>=8.0"]

[project.scripts]
protoforge = "vulnforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
